2007-10-09  Jakub Jelinek  <jakub@redhat.com>

	* src/prelink.h (struct prelink_conflicts): New type.
	(struct prelink_info): Change type of conflicts and curconflicts
	fields to struct prelink_conflicts *.
	* src/get.c (conflict_hash_init): New function.
	(prelink_record_relocations): Adjust initialization of conflicts
	array.  If conflict linked lists has more than 15 entries, use
	hash table with chains.
	* src/prelink.c (free_info): Handle freeing conflict list using a hash
	table.
	* src/fptr.c (opd_init): Only walk corresponding hash chain if
	conflict list is using a hash table.
	* src/conflict.c (prelink_conflict): Likewise.
	(prelink_build_conflicts): Handle conflict list using a hash table.
	* src/cxx.c (remove_redundant_cxx_conflicts): Likewise.  Only walk
	corresponding hash chain if conflict list is using a hash table.

	* src/doit.c (find_ents): Clear e->u.tmp.
	(clear_ent_marks, find_unlisted_dependency): Remove.
	(prelink_ent): More efficient non-recursive check for
	unlisted dependencies.

	* src/cxx.c (find_cxx_sym): If fcs->lastndx != -1, search first
	among symbols around it.

2007-10-08  Jakub Jelinek  <jakub@redhat.com>

	* src/space.c (find_readonly_space): Disallow section insertion in
	between adjacent SHT_NOTE sections.  When creating new PT_LOAD,
	handle multiple consecutive SHT_NOTE sections with just one PT_NOTE
	segment for them.
	* testsuite/Makefile.am (TESTS): Add shuffle9.sh.
	* testsuite/Makefile.in: Regenerated.
	* testsuite/shuffle9.sh: New test.
	* testsuite/shuffle9.c: New.

	* testsuite/shuffle2.c: Add .previous at the end of __asm.
	* testsuite/reloc5.c (main): Likewise.

	* testsuite/tls3.sh: If libs aren't built with -fpic,
	disable the test under SELinux in enforcing mode.

	* src/cxx.c: Include alloca.h.
	(specials): Moved out of remove_redundant_cxx_conflicts to toplevel.
	Remove section fields.
	(find_cxx_sym_valsize, find_cxx_sym_cache): New structs.
	(struct find_cxx_sym): Add cache and lastndx fields.